# Test-experiments-and-notes

CLionProjects/test1/: CMakeLists.txt  main.cpp
CLionProjects/test1/ExampleClasses/Example1/: Example1.cpp  Example1.h
CLionProjects/test1/ExampleClasses/Example2/: Exapmle2OSG.cpp  Exapmle2OSG.h
CLionProjects/test1/data/: Faucet LUMIER LM1808 N200416.3DS
